data/derived/comb/progs/unify/prog8387.ml.out
Characters 102-110:
  if (j+k>10) then (1, a::(j+k-10)) else (0, a::(j+k)) in 
                          ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
